--- a/OWO.html
+++ b/OWO.html
@@ -82,7 +82,7 @@
         <button onclick="location.reload()">Reiniciar</button>
     </div>
     <audio id="move-sound" src="Piu.mp3"></audio>
-    <audio id="background-music" src="A.mp3" autoplay loop></audio>
+    <audio id="background-music" src="A.mp3" autoplay loop controls></audio>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const images = [
